--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,61 @@
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="../assets/css/heroic-features.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
+<br>
+
+
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #f2c4b9;">
+    <div class="container">
+      <a *ngIf="user" class="navbar-brand" [routerLink]="['/profile']"><i class="fas fa-user-circle fa-2x"></i><a class="username">{{user.name }}</a></a>
+      <div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div> 
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/login']"><i class="fas fa-sign-in-alt"></i>
+                </a>
+              </li>
+            <li class="nav-item active">
+                <a class="nav-link" [routerLink]="['/home']"><i class="fas fa-home"></i>
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/index']"><i class="fas fa-tag"></i>
+                </a>
+              </li>
+
+          <li class="nav-item">
+            <!-- <p>Blahhhhh {{ myAuth._id }}</p> -->
+            <a *ngIf="user" class="nav-link" [routerLink]="['/user',user._id, 'cart']"><i class="fas fa-shopping-bag"></i></a>
+<!--             <a class="nav-link" [routerLink]="['/user',user._id,'cart']">Cart</a> -->
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" (click)="logout()" [routerLink]="['/index']"><i class="fas fa-sign-out-alt"></i>
+              </a>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+  
+  <router-outlet></router-outlet>
+
+<script src="../assets/vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 
